crates/keron-lang/tests/corpus/errors/check/match_into_string_union_rejects_off_variant.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `"bogus"` is not a variant of `Mode` (expected one of `"on"`, `"off"`)
  --> 8:8
  |
8 |   _ => "bogus",
  |        ^^^^^^^
